force-app/main/default/objects/SalesforceCase__x/fields/Cas_DocumentExpirationDateC__c.field-meta.xml
<CustomField>
    <fullName>Cas_DocumentExpirationDateC__c</fullName>
    <description>Cas_DocumentExpirationDateC</description>
    <externalDeveloperName>Cas_DocumentExpirationDateC</externalDeveloperName>
    <label>Cas_DocumentExpirationDateC</label>
    <type>DateTime</type>
</CustomField>