force-app/main/default/objects/SalesforceCase__x/fields/Cas_DocumentPaymentMethodC__c.field-meta.xml
<CustomField>
    <fullName>Cas_DocumentPaymentMethodC__c</fullName>
    <description>Cas_DocumentPaymentMethodC</description>
    <externalDeveloperName>Cas_DocumentPaymentMethodC</externalDeveloperName>
    <label>Modalità di pagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>