force-app/main/default/objects/SalesforceCase__x/fields/Cas_DocusignURLC__c.field-meta.xml
<CustomField>
    <fullName>Cas_DocusignURLC__c</fullName>
    <description>Cas_DocusignURLC</description>
    <externalDeveloperName>Cas_DocusignURLC</externalDeveloperName>
    <label>URL Docusign</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>