force-app/main/default/objects/SalesforceCase__x/fields/Cas_EarlyRecessC__c.field-meta.xml
<CustomField>
    <fullName>Cas_EarlyRecessC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cas_EarlyRecessC</description>
    <externalDeveloperName>Cas_EarlyRecessC</externalDeveloperName>
    <label>Cas_EarlyRecessC</label>
    <type>Checkbox</type>
</CustomField>