force-app/main/default/objects/SalesforceCase__x/fields/Cas_ElementDetailC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ElementDetailC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cas_ElementDetailC</description>
    <externalDeveloperName>Cas_ElementDetailC</externalDeveloperName>
    <label>Elementi di Dettaglio</label>
    <type>Checkbox</type>
</CustomField>