force-app/main/default/objects/SalesforceCase__x/fields/Cas_EmailC__c.field-meta.xml
<CustomField>
    <fullName>Cas_EmailC__c</fullName>
    <description>Cas_EmailC</description>
    <externalDeveloperName>Cas_EmailC</externalDeveloperName>
    <label>Cas_EmailC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>