force-app/main/default/objects/SalesforceCase__x/fields/Cas_EndAppointmentC__c.field-meta.xml
<CustomField>
    <fullName>Cas_EndAppointmentC__c</fullName>
    <description>Cas_EndAppointmentC</description>
    <externalDeveloperName>Cas_EndAppointmentC</externalDeveloperName>
    <label>Fine Appuntamento</label>
    <type>DateTime</type>
</CustomField>