force-app/main/default/objects/SalesforceCase__x/fields/Cas_EndDateC__c.field-meta.xml
<CustomField>
    <fullName>Cas_EndDateC__c</fullName>
    <description>Cas_EndDateC</description>
    <externalDeveloperName>Cas_EndDateC</externalDeveloperName>
    <label>Data Fine</label>
    <type>DateTime</type>
</CustomField>