force-app/main/default/objects/SalesforceCase__x/fields/Cas_ErrorC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ErrorC__c</fullName>
    <description>Cas_ErrorC</description>
    <externalDeveloperName>Cas_ErrorC</externalDeveloperName>
    <label>Errore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>