force-app/main/default/objects/SalesforceCase__x/fields/Cas_ErrorTypeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ErrorTypeC__c</fullName>
    <description>Cas_ErrorTypeC</description>
    <externalDeveloperName>Cas_ErrorTypeC</externalDeveloperName>
    <label>Tipo Errore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>