force-app/main/default/objects/SalesforceCase__x/fields/Cas_ExcisesC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ExcisesC__c</fullName>
    <description>Cas_ExcisesC</description>
    <externalDeveloperName>Cas_ExcisesC</externalDeveloperName>
    <label>Cas_ExcisesC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>