force-app/main/default/objects/SalesforceCase__x/fields/Cas_ExistingInstallmentsPlanNumberC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ExistingInstallmentsPlanNumberC__c</fullName>
    <description>Cas_ExistingInstallmentsPlanNumberC</description>
    <externalDeveloperName>Cas_ExistingInstallmentsPlanNumberC</externalDeveloperName>
    <label>Numero Piani Rata Esistenti</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>