force-app/main/default/objects/SalesforceCase__x/fields/Cas_ExpirationOpinionC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ExpirationOpinionC__c</fullName>
    <description>Cas_ExpirationOpinionC</description>
    <externalDeveloperName>Cas_ExpirationOpinionC</externalDeveloperName>
    <label>Scadenza Parere</label>
    <type>DateTime</type>
</CustomField>