force-app/main/default/objects/SalesforceCase__x/fields/Cas_ExternalTraderC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ExternalTraderC__c</fullName>
    <description>Cas_ExternalTraderC</description>
    <externalDeveloperName>Cas_ExternalTraderC</externalDeveloperName>
    <label>Nome Venditore Terzo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>