force-app/main/default/objects/SalesforceCase__x/fields/Cas_FacilityTypeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_FacilityTypeC__c</fullName>
    <description>Cas_FacilityTypeC</description>
    <externalDeveloperName>Cas_FacilityTypeC</externalDeveloperName>
    <label>Tipo agevolazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>