force-app/main/default/objects/SalesforceCase__x/fields/Cas_FirstExpirationDateC__c.field-meta.xml
<CustomField>
    <fullName>Cas_FirstExpirationDateC__c</fullName>
    <description>Cas_FirstExpirationDateC</description>
    <externalDeveloperName>Cas_FirstExpirationDateC</externalDeveloperName>
    <label>Cas_FirstExpirationDateC</label>
    <type>DateTime</type>
</CustomField>