force-app/main/default/objects/SalesforceCase__x/fields/Cas_FourthLevelComplaintClassificationC__c.field-meta.xml
<CustomField>
    <fullName>Cas_FourthLevelComplaintClassificationC__c</fullName>
    <description>Cas_FourthLevelComplaintClassificationC</description>
    <externalDeveloperName>Cas_FourthLevelComplaintClassificationC</externalDeveloperName>
    <label>4° Livello</label>
    <length>255</length>
    <type>Text</type>
</CustomField>