force-app/main/default/objects/SalesforceCase__x/fields/Cas_HerokuPracticeCodeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_HerokuPracticeCodeC__c</fullName>
    <description>Cas_HerokuPracticeCodeC</description>
    <externalDeveloperName>Cas_HerokuPracticeCodeC</externalDeveloperName>
    <label>Cas_HerokuPracticeCodeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>