force-app/main/default/objects/SalesforceCase__x/fields/Cas_HistoricalIncorrectBehaviorC__c.field-meta.xml
<CustomField>
    <fullName>Cas_HistoricalIncorrectBehaviorC__c</fullName>
    <description>Cas_HistoricalIncorrectBehaviorC</description>
    <externalDeveloperName>Cas_HistoricalIncorrectBehaviorC</externalDeveloperName>
    <label>Storico Comportamento non corretto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>