force-app/main/default/objects/SalesforceCase__x/fields/Cas_HouseOwnerC__c.field-meta.xml
<CustomField>
    <fullName>Cas_HouseOwnerC__c</fullName>
    <description>Cas_HouseOwnerC</description>
    <externalDeveloperName>Cas_HouseOwnerC</externalDeveloperName>
    <label>Cas_HouseOwnerC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>