force-app/main/default/objects/SalesforceCase__x/fields/Cas_IbanABIC__c.field-meta.xml
<CustomField>
    <fullName>Cas_IbanABIC__c</fullName>
    <description>Cas_IbanABIC</description>
    <externalDeveloperName>Cas_IbanABIC</externalDeveloperName>
    <label>ABI</label>
    <length>5</length>
    <type>Text</type>
</CustomField>