force-app/main/default/objects/SalesforceCase__x/fields/Cas_IbanC__c.field-meta.xml
<CustomField>
    <fullName>Cas_IbanC__c</fullName>
    <description>Cas_IbanC</description>
    <externalDeveloperName>Cas_IbanC</externalDeveloperName>
    <label>IBAN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>