force-app/main/default/objects/SalesforceCase__x/fields/Cas_IbanCIN_IBANC__c.field-meta.xml
<CustomField>
    <fullName>Cas_IbanCIN_IBANC__c</fullName>
    <description>Cas_IbanCIN_IBANC</description>
    <externalDeveloperName>Cas_IbanCIN_IBANC</externalDeveloperName>
    <label>Cas_IbanCIN_IBANC</label>
    <length>2</length>
    <type>Text</type>
</CustomField>