force-app/main/default/objects/SalesforceCase__x/fields/Cas_IbanCINC__c.field-meta.xml
<CustomField>
    <fullName>Cas_IbanCINC__c</fullName>
    <description>Cas_IbanCINC</description>
    <externalDeveloperName>Cas_IbanCINC</externalDeveloperName>
    <label>Cas_IbanCINC</label>
    <length>1</length>
    <type>Text</type>
</CustomField>