force-app/main/default/objects/SalesforceCase__x/fields/Cas_IbanCodeNumberC__c.field-meta.xml
<CustomField>
    <fullName>Cas_IbanCodeNumberC__c</fullName>
    <description>Cas_IbanCodeNumberC</description>
    <externalDeveloperName>Cas_IbanCodeNumberC</externalDeveloperName>
    <label>Numero conto corrente</label>
    <length>12</length>
    <type>Text</type>
</CustomField>