force-app/main/default/objects/SalesforceCase__x/fields/Cas_IbanIsForeignC__c.field-meta.xml
<CustomField>
    <fullName>Cas_IbanIsForeignC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cas_IbanIsForeignC</description>
    <externalDeveloperName>Cas_IbanIsForeignC</externalDeveloperName>
    <label>Cas_IbanIsForeignC</label>
    <type>Checkbox</type>
</CustomField>