force-app/main/default/objects/SalesforceCase__x/fields/Cas_ImmobileSurfaceC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ImmobileSurfaceC__c</fullName>
    <description>Cas_ImmobileSurfaceC</description>
    <externalDeveloperName>Cas_ImmobileSurfaceC</externalDeveloperName>
    <label>Superficie immobile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>