force-app/main/default/objects/SalesforceCase__x/fields/Cas_ImplantTypeFormulaC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ImplantTypeFormulaC__c</fullName>
    <description>Cas_ImplantTypeFormulaC</description>
    <externalDeveloperName>Cas_ImplantTypeFormulaC</externalDeveloperName>
    <label>Cas_ImplantTypeFormulaC</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>