force-app/main/default/objects/SalesforceCase__x/fields/Cas_InformationDetailC__c.field-meta.xml
<CustomField>
    <fullName>Cas_InformationDetailC__c</fullName>
    <description>Cas_InformationDetailC</description>
    <externalDeveloperName>Cas_InformationDetailC</externalDeveloperName>
    <label>Dettaglio Informazioni</label>
    <length>255</length>
    <type>Text</type>
</CustomField>