force-app/main/default/objects/SalesforceCase__x/fields/Cas_InstallmentAmountC__c.field-meta.xml
<CustomField>
    <fullName>Cas_InstallmentAmountC__c</fullName>
    <description>Cas_InstallmentAmountC</description>
    <externalDeveloperName>Cas_InstallmentAmountC</externalDeveloperName>
    <label>Cas_InstallmentAmountC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>