force-app/main/default/objects/SalesforceCase__x/fields/Cas_InstallmentNumberRequiredC__c.field-meta.xml
<CustomField>
    <fullName>Cas_InstallmentNumberRequiredC__c</fullName>
    <description>Cas_InstallmentNumberRequiredC</description>
    <externalDeveloperName>Cas_InstallmentNumberRequiredC</externalDeveloperName>
    <label>Numero Rate Richieste</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>