force-app/main/default/objects/SalesforceCase__x/fields/Cas_IntegrationIdC__c.field-meta.xml
<CustomField>
    <fullName>Cas_IntegrationIdC__c</fullName>
    <description>Cas_IntegrationIdC</description>
    <externalDeveloperName>Cas_IntegrationIdC</externalDeveloperName>
    <label>Cas_IntegrationIdC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>