force-app/main/default/objects/SalesforceCase__x/fields/Cas_InvoiceCertifiedEmailAddressC__c.field-meta.xml
<CustomField>
    <fullName>Cas_InvoiceCertifiedEmailAddressC__c</fullName>
    <description>Cas_InvoiceCertifiedEmailAddressC</description>
    <externalDeveloperName>Cas_InvoiceCertifiedEmailAddressC</externalDeveloperName>
    <label>Email PEC Invio Bolletta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>