force-app/main/default/objects/SalesforceCase__x/fields/Cas_IsContainerC__c.field-meta.xml
<CustomField>
    <fullName>Cas_IsContainerC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cas_IsContainerC</description>
    <externalDeveloperName>Cas_IsContainerC</externalDeveloperName>
    <label>Cas_IsContainerC</label>
    <type>Checkbox</type>
</CustomField>