force-app/main/default/objects/SalesforceCase__x/fields/Cas_IsInvoicingVerifiedC__c.field-meta.xml
<CustomField>
    <fullName>Cas_IsInvoicingVerifiedC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cas_IsInvoicingVerifiedC</description>
    <externalDeveloperName>Cas_IsInvoicingVerifiedC</externalDeveloperName>
    <label>Indirizzo Verificato [Spedizione/Fatturazione]</label>
    <type>Checkbox</type>
</CustomField>