force-app/main/default/objects/SalesforceCase__x/fields/Cas_IsMigratedC__c.field-meta.xml
<CustomField>
    <fullName>Cas_IsMigratedC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cas_IsMigratedC</description>
    <externalDeveloperName>Cas_IsMigratedC</externalDeveloperName>
    <label>Migrato</label>
    <type>Checkbox</type>
</CustomField>