force-app/main/default/objects/SalesforceCase__x/fields/Cas_IsVATGroupJoinedC__c.field-meta.xml
<CustomField>
    <fullName>Cas_IsVATGroupJoinedC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cas_IsVATGroupJoinedC</description>
    <externalDeveloperName>Cas_IsVATGroupJoinedC</externalDeveloperName>
    <label>Flag Adesione Gruppo IVA</label>
    <type>Checkbox</type>
</CustomField>