force-app/main/default/objects/SalesforceCase__x/fields/Cas_KnowledgeClientCategoryC__c.field-meta.xml
<CustomField>
    <fullName>Cas_KnowledgeClientCategoryC__c</fullName>
    <description>Cas_KnowledgeClientCategoryC</description>
    <externalDeveloperName>Cas_KnowledgeClientCategoryC</externalDeveloperName>
    <label>Cas_KnowledgeClientCategoryC</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>