force-app/main/default/objects/SalesforceCase__x/fields/Cas_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>Cas_LastModifiedDate__c</fullName>
    <description>Cas_LastModifiedDate</description>
    <externalDeveloperName>Cas_LastModifiedDate</externalDeveloperName>
    <label>Cas_LastModifiedDate</label>
    <type>DateTime</type>
</CustomField>