force-app/main/default/objects/SalesforceCase__x/fields/Cas_LastNameC__c.field-meta.xml
<CustomField>
    <fullName>Cas_LastNameC__c</fullName>
    <description>Cas_LastNameC</description>
    <externalDeveloperName>Cas_LastNameC</externalDeveloperName>
    <label>Cas_LastNameC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>