force-app/main/default/objects/SalesforceCase__x/fields/Cas_LitigationTypeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_LitigationTypeC__c</fullName>
    <description>Cas_LitigationTypeC</description>
    <externalDeveloperName>Cas_LitigationTypeC</externalDeveloperName>
    <label>Cas_LitigationTypeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>