force-app/main/default/objects/SalesforceCase__x/fields/Cas_MacroTopicC__c.field-meta.xml
<CustomField>
    <fullName>Cas_MacroTopicC__c</fullName>
    <description>Cas_MacroTopicC</description>
    <externalDeveloperName>Cas_MacroTopicC</externalDeveloperName>
    <label>Cas_MacroTopicC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>