force-app/main/default/objects/SalesforceCase__x/fields/Cas_MandatoryAttachmentsC__c.field-meta.xml
<CustomField>
    <fullName>Cas_MandatoryAttachmentsC__c</fullName>
    <description>Cas_MandatoryAttachmentsC</description>
    <externalDeveloperName>Cas_MandatoryAttachmentsC</externalDeveloperName>
    <label>Allegati obbligatori</label>
    <length>255</length>
    <type>Text</type>
</CustomField>