force-app/main/default/objects/SalesforceCase__x/fields/Cas_MarketC__c.field-meta.xml
<CustomField>
    <fullName>Cas_MarketC__c</fullName>
    <description>Cas_MarketC</description>
    <externalDeveloperName>Cas_MarketC</externalDeveloperName>
    <label>Cas_MarketC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>