force-app/main/default/objects/SalesforceCase__x/fields/Cas_MaxInstallmentsNumberC__c.field-meta.xml
<CustomField>
    <fullName>Cas_MaxInstallmentsNumberC__c</fullName>
    <description>Cas_MaxInstallmentsNumberC</description>
    <externalDeveloperName>Cas_MaxInstallmentsNumberC</externalDeveloperName>
    <label>Numero massimo rate concedibili</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>