force-app/main/default/objects/SalesforceCase__x/fields/Cas_MobileC__c.field-meta.xml
<CustomField>
    <fullName>Cas_MobileC__c</fullName>
    <description>Cas_MobileC</description>
    <externalDeveloperName>Cas_MobileC</externalDeveloperName>
    <label>Cas_MobileC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>