force-app/main/default/objects/SalesforceCase__x/fields/Cas_MobilePhoneNoticePesseC__c.field-meta.xml
<CustomField>
    <fullName>Cas_MobilePhoneNoticePesseC__c</fullName>
    <description>Cas_MobilePhoneNoticePesseC</description>
    <externalDeveloperName>Cas_MobilePhoneNoticePesseC</externalDeveloperName>
    <label>Telefono cellulare preavviso pers. Pesse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>