force-app/main/default/objects/SalesforceCase__x/fields/Cas_ModuleFromContributorC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ModuleFromContributorC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cas_ModuleFromContributorC</description>
    <externalDeveloperName>Cas_ModuleFromContributorC</externalDeveloperName>
    <label>Modulo prodotto da contribuente</label>
    <type>Checkbox</type>
</CustomField>