force-app/main/default/objects/SalesforceCase__x/fields/Cas_MotivatedResponseSendModeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_MotivatedResponseSendModeC__c</fullName>
    <description>Cas_MotivatedResponseSendModeC</description>
    <externalDeveloperName>Cas_MotivatedResponseSendModeC</externalDeveloperName>
    <label>Modalità Invio Risposta motivata</label>
    <length>255</length>
    <type>Text</type>
</CustomField>