force-app/main/default/objects/SalesforceCase__x/fields/Cas_NewAttemptC__c.field-meta.xml
<CustomField>
    <fullName>Cas_NewAttemptC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cas_NewAttemptC</description>
    <externalDeveloperName>Cas_NewAttemptC</externalDeveloperName>
    <label>Nuovo Tentativo</label>
    <type>Checkbox</type>
</CustomField>