force-app/main/default/objects/SalesforceCase__x/fields/Cas_NewMeterCodeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_NewMeterCodeC__c</fullName>
    <description>Cas_NewMeterCodeC</description>
    <externalDeveloperName>Cas_NewMeterCodeC</externalDeveloperName>
    <label>Nuova matricola</label>
    <length>255</length>
    <type>Text</type>
</CustomField>