force-app/main/default/objects/SalesforceCase__x/fields/Cas_NominativeHavingRightCeaseConcession__c.field-meta.xml
<CustomField>
    <fullName>Cas_NominativeHavingRightCeaseConcession__c</fullName>
    <description>Cas_NominativeHavingRightCeaseConcessionC</description>
    <externalDeveloperName>Cas_NominativeHavingRightCeaseConcessionC</externalDeveloperName>
    <label>Nominativo diritto agev da cessare</label>
    <length>255</length>
    <type>Text</type>
</CustomField>