force-app/main/default/objects/SalesforceCase__x/fields/Cas_NoteC__c.field-meta.xml
<CustomField>
    <fullName>Cas_NoteC__c</fullName>
    <description>Cas_NoteC</description>
    <externalDeveloperName>Cas_NoteC</externalDeveloperName>
    <label>Note</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>