force-app/main/default/objects/SalesforceCase__x/fields/Cas_NotJustMotivationC__c.field-meta.xml
<CustomField>
    <fullName>Cas_NotJustMotivationC__c</fullName>
    <description>Cas_NotJustMotivationC</description>
    <externalDeveloperName>Cas_NotJustMotivationC</externalDeveloperName>
    <label>Motivo Non Fondato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>