force-app/main/default/objects/SalesforceCase__x/fields/Cas_NumberMembersC__c.field-meta.xml
<CustomField>
    <fullName>Cas_NumberMembersC__c</fullName>
    <description>Cas_NumberMembersC</description>
    <externalDeveloperName>Cas_NumberMembersC</externalDeveloperName>
    <label>Numero componenti</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>