force-app/main/default/objects/SalesforceCase__x/fields/Cas_NumberOfPeopleC__c.field-meta.xml
<CustomField>
    <fullName>Cas_NumberOfPeopleC__c</fullName>
    <description>Cas_NumberOfPeopleC</description>
    <externalDeveloperName>Cas_NumberOfPeopleC</externalDeveloperName>
    <label>Cas_NumberOfPeopleC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>