force-app/main/default/objects/SalesforceCase__x/fields/Cas_OnerousUnreviewableStartDateC__c.field-meta.xml
<CustomField>
    <fullName>Cas_OnerousUnreviewableStartDateC__c</fullName>
    <description>Cas_OnerousUnreviewableStartDateC</description>
    <externalDeveloperName>Cas_OnerousUnreviewableStartDateC</externalDeveloperName>
    <label>Inizio periodo non ravvedibile</label>
    <type>DateTime</type>
</CustomField>