force-app/main/default/objects/SalesforceCase__x/fields/Cas_OneshotCustomerC__c.field-meta.xml
<CustomField>
    <fullName>Cas_OneshotCustomerC__c</fullName>
    <description>Cas_OneshotCustomerC</description>
    <externalDeveloperName>Cas_OneshotCustomerC</externalDeveloperName>
    <label>Cliente Oneshot</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>