force-app/main/default/objects/SalesforceCase__x/fields/Cas_OperatorCodeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_OperatorCodeC__c</fullName>
    <description>Cas_OperatorCodeC</description>
    <externalDeveloperName>Cas_OperatorCodeC</externalDeveloperName>
    <label>Codice Operatore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>