force-app/main/default/objects/SalesforceCase__x/fields/Cas_OpinionRequestResponseC__c.field-meta.xml
<CustomField>
    <fullName>Cas_OpinionRequestResponseC__c</fullName>
    <description>Cas_OpinionRequestResponseC</description>
    <externalDeveloperName>Cas_OpinionRequestResponseC</externalDeveloperName>
    <label>Risposta alla richiesta parere</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>