force-app/main/default/objects/SalesforceCase__x/fields/Cas_OtherConcessionC__c.field-meta.xml
<CustomField>
    <fullName>Cas_OtherConcessionC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cas_OtherConcessionC</description>
    <externalDeveloperName>Cas_OtherConcessionC</externalDeveloperName>
    <label>Agevolazioni Altro</label>
    <type>Checkbox</type>
</CustomField>