force-app/main/default/objects/SalesforceCase__x/fields/Cas_ParentId__c.field-meta.xml
<CustomField>
    <fullName>Cas_ParentId__c</fullName>
    <description>Cas_ParentId</description>
    <externalDeveloperName>Cas_ParentId</externalDeveloperName>
    <label>Cas_ParentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>