force-app/main/default/objects/SalesforceCase__x/fields/Cas_PayerDetailsC__c.field-meta.xml
<CustomField>
    <fullName>Cas_PayerDetailsC__c</fullName>
    <description>Cas_PayerDetailsC</description>
    <externalDeveloperName>Cas_PayerDetailsC</externalDeveloperName>
    <label>Cas_PayerDetailsC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>