force-app/main/default/objects/SalesforceCase__x/fields/Cas_PaymentDetailsC__c.field-meta.xml
<CustomField>
    <fullName>Cas_PaymentDetailsC__c</fullName>
    <description>Cas_PaymentDetailsC</description>
    <externalDeveloperName>Cas_PaymentDetailsC</externalDeveloperName>
    <label>Estremi di pagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>