force-app/main/default/objects/SalesforceCase__x/fields/Cas_PaymentTypeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_PaymentTypeC__c</fullName>
    <description>Cas_PaymentTypeC</description>
    <externalDeveloperName>Cas_PaymentTypeC</externalDeveloperName>
    <label>Tipo di Pagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>