force-app/main/default/objects/SalesforceCase__x/fields/Cas_PaySewerC__c.field-meta.xml
<CustomField>
    <fullName>Cas_PaySewerC__c</fullName>
    <description>Cas_PaySewerC</description>
    <externalDeveloperName>Cas_PaySewerC</externalDeveloperName>
    <label>Paga Fognatura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>