force-app/main/default/objects/SalesforceCase__x/fields/Cas_PerformanceTypeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_PerformanceTypeC__c</fullName>
    <description>Cas_PerformanceTypeC</description>
    <externalDeveloperName>Cas_PerformanceTypeC</externalDeveloperName>
    <label>Tipo Prestazione</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>