force-app/main/default/objects/SalesforceCase__x/fields/Cas_PhaseC__c.field-meta.xml
<CustomField>
    <fullName>Cas_PhaseC__c</fullName>
    <description>Cas_PhaseC</description>
    <externalDeveloperName>Cas_PhaseC</externalDeveloperName>
    <label>Cas_PhaseC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>