force-app/main/default/objects/SalesforceCase__x/fields/Cas_PhaseStoryC__c.field-meta.xml
<CustomField>
    <fullName>Cas_PhaseStoryC__c</fullName>
    <description>Cas_PhaseStoryC</description>
    <externalDeveloperName>Cas_PhaseStoryC</externalDeveloperName>
    <label>Cas_PhaseStoryC</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>