force-app/main/default/objects/SalesforceCase__x/fields/Cas_PhaseTypeAvailableC__c.field-meta.xml
<CustomField>
    <fullName>Cas_PhaseTypeAvailableC__c</fullName>
    <description>Cas_PhaseTypeAvailableC</description>
    <externalDeveloperName>Cas_PhaseTypeAvailableC</externalDeveloperName>
    <label>Fase Disponibile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>