force-app/main/default/objects/SalesforceCase__x/fields/Cas_PhoneNumberC__c.field-meta.xml
<CustomField>
    <fullName>Cas_PhoneNumberC__c</fullName>
    <description>Cas_PhoneNumberC</description>
    <externalDeveloperName>Cas_PhoneNumberC</externalDeveloperName>
    <label>Recapito Telefonico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>