force-app/main/default/objects/SalesforceCase__x/fields/Cas_PointToConnectC__c.field-meta.xml
<CustomField>
    <fullName>Cas_PointToConnectC__c</fullName>
    <description>Cas_PointToConnectC</description>
    <externalDeveloperName>Cas_PointToConnectC</externalDeveloperName>
    <label>Cas_PointToConnectC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>