force-app/main/default/objects/SalesforceCase__x/fields/Cas_PowerReductionDateC__c.field-meta.xml
<CustomField>
    <fullName>Cas_PowerReductionDateC__c</fullName>
    <description>Cas_PowerReductionDateC</description>
    <externalDeveloperName>Cas_PowerReductionDateC</externalDeveloperName>
    <label>Cas_PowerReductionDateC</label>
    <type>DateTime</type>
</CustomField>