force-app/main/default/objects/SalesforceCase__x/fields/Cas_PressureC__c.field-meta.xml
<CustomField>
    <fullName>Cas_PressureC__c</fullName>
    <description>Cas_PressureC</description>
    <externalDeveloperName>Cas_PressureC</externalDeveloperName>
    <label>Pressione</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>