force-app/main/default/objects/SalesforceCase__x/fields/Cas_Priority__c.field-meta.xml
<CustomField>
    <fullName>Cas_Priority__c</fullName>
    <description>Cas_Priority</description>
    <externalDeveloperName>Cas_Priority</externalDeveloperName>
    <label>Cas_Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>