force-app/main/default/objects/SalesforceCase__x/fields/Cas_QuotationNumberC__c.field-meta.xml
<CustomField>
    <fullName>Cas_QuotationNumberC__c</fullName>
    <description>Cas_QuotationNumberC</description>
    <externalDeveloperName>Cas_QuotationNumberC</externalDeveloperName>
    <label>Cas_QuotationNumberC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>