force-app/main/default/objects/SalesforceCase__x/fields/Cas_QuotationValidityDateC__c.field-meta.xml
<CustomField>
    <fullName>Cas_QuotationValidityDateC__c</fullName>
    <description>Cas_QuotationValidityDateC</description>
    <externalDeveloperName>Cas_QuotationValidityDateC</externalDeveloperName>
    <label>Cas_QuotationValidityDateC</label>
    <type>DateTime</type>
</CustomField>