force-app/main/default/objects/SalesforceCase__x/fields/Cas_RateCategoryC__c.field-meta.xml
<CustomField>
    <fullName>Cas_RateCategoryC__c</fullName>
    <description>Cas_RateCategoryC</description>
    <externalDeveloperName>Cas_RateCategoryC</externalDeveloperName>
    <label>Cas_RateCategoryC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>