force-app/main/default/objects/SalesforceCase__x/fields/Cas_ReadingDateC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ReadingDateC__c</fullName>
    <description>Cas_ReadingDateC</description>
    <externalDeveloperName>Cas_ReadingDateC</externalDeveloperName>
    <label>Cas_ReadingDateC</label>
    <type>DateTime</type>
</CustomField>