force-app/main/default/objects/SalesforceCase__x/fields/Cas_RecipientStructureC__c.field-meta.xml
<CustomField>
    <fullName>Cas_RecipientStructureC__c</fullName>
    <description>Cas_RecipientStructureC</description>
    <externalDeveloperName>Cas_RecipientStructureC</externalDeveloperName>
    <label>Struttura Destinataria </label>
    <length>255</length>
    <type>Text</type>
</CustomField>