force-app/main/default/objects/SalesforceCase__x/fields/Cas_RefundMethodC__c.field-meta.xml
<CustomField>
    <fullName>Cas_RefundMethodC__c</fullName>
    <description>Cas_RefundMethodC</description>
    <externalDeveloperName>Cas_RefundMethodC</externalDeveloperName>
    <label>Cas_RefundMethodC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>