force-app/main/default/objects/SalesforceCase__x/fields/Cas_RelatedCaseC__c.field-meta.xml
<CustomField>
    <fullName>Cas_RelatedCaseC__c</fullName>
    <description>Cas_RelatedCaseC</description>
    <externalDeveloperName>Cas_RelatedCaseC</externalDeveloperName>
    <label>Cas_RelatedCaseC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>