force-app/main/default/objects/SalesforceCase__x/fields/Cas_ReminderBlockC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ReminderBlockC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cas_ReminderBlockC</description>
    <externalDeveloperName>Cas_ReminderBlockC</externalDeveloperName>
    <label>Cas_ReminderBlockC</label>
    <type>Checkbox</type>
</CustomField>