force-app/main/default/objects/SalesforceCase__x/fields/Cas_RequestSourceC__c.field-meta.xml
<CustomField>
    <fullName>Cas_RequestSourceC__c</fullName>
    <description>Cas_RequestSourceC</description>
    <externalDeveloperName>Cas_RequestSourceC</externalDeveloperName>
    <label>Cas_RequestSourceC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>