force-app/main/default/objects/SalesforceCase__x/fields/Cas_ResidentC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ResidentC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cas_ResidentC</description>
    <externalDeveloperName>Cas_ResidentC</externalDeveloperName>
    <label>Residente</label>
    <type>Checkbox</type>
</CustomField>