force-app/main/default/objects/SalesforceCase__x/fields/Cas_ResidentMembersC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ResidentMembersC__c</fullName>
    <description>Cas_ResidentMembersC</description>
    <externalDeveloperName>Cas_ResidentMembersC</externalDeveloperName>
    <label>Numero componenti residenti</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>