force-app/main/default/objects/SalesforceCase__x/fields/Cas_ResolutionC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ResolutionC__c</fullName>
    <description>Cas_ResolutionC</description>
    <externalDeveloperName>Cas_ResolutionC</externalDeveloperName>
    <label>Cas_ResolutionC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>