force-app/main/default/objects/SalesforceCase__x/fields/Cas_ResponseTemplateC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ResponseTemplateC__c</fullName>
    <description>Cas_ResponseTemplateC</description>
    <externalDeveloperName>Cas_ResponseTemplateC</externalDeveloperName>
    <label>Cas_ResponseTemplateC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>