force-app/main/default/objects/SalesforceCase__x/fields/Cas_ResponseTopicC__c.field-meta.xml
<CustomField>
    <fullName>Cas_ResponseTopicC__c</fullName>
    <description>Cas_ResponseTopicC</description>
    <externalDeveloperName>Cas_ResponseTopicC</externalDeveloperName>
    <label>Argomento risposte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>