force-app/main/default/objects/SalesforceCase__x/fields/Cas_RonchiCodeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_RonchiCodeC__c</fullName>
    <description>Cas_RonchiCodeC</description>
    <externalDeveloperName>Cas_RonchiCodeC</externalDeveloperName>
    <label>Cas_RonchiCodeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>