force-app/main/default/objects/SalesforceCase__x/fields/Cas_SelfCertificationPesseFailureNoticeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_SelfCertificationPesseFailureNoticeC__c</fullName>
    <description>Cas_SelfCertificationPesseFailureNoticeC</description>
    <externalDeveloperName>Cas_SelfCertificationPesseFailureNoticeC</externalDeveloperName>
    <label>Autocertificazione mancato avviso Pesse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>