force-app/main/default/objects/SalesforceCase__x/fields/Cas_SendCertifiedEmailConsentDateC__c.field-meta.xml
<CustomField>
    <fullName>Cas_SendCertifiedEmailConsentDateC__c</fullName>
    <description>Cas_SendCertifiedEmailConsentDateC</description>
    <externalDeveloperName>Cas_SendCertifiedEmailConsentDateC</externalDeveloperName>
    <label>Data consenso E-mail PEC Invio Bolletta</label>
    <type>DateTime</type>
</CustomField>