force-app/main/default/objects/SalesforceCase__x/fields/Cas_SendModeC__c.field-meta.xml
<CustomField>
    <fullName>Cas_SendModeC__c</fullName>
    <description>Cas_SendModeC</description>
    <externalDeveloperName>Cas_SendModeC</externalDeveloperName>
    <label>Modalità invio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>